// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket should return success for base overriden by default adapter overrides 1`] = `
{
  "data": {
    "result": 1.098455,
  },
  "result": 1.098455,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1641035471111,
  },
}
`;

exports[`websocket should return success for full symbols 1`] = `
{
  "data": {
    "result": 1.098455,
  },
  "result": 1.098455,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1641035471111,
  },
}
`;

exports[`websocket should return success for requests with base and quote 1`] = `
{
  "data": {
    "result": 1.098455,
  },
  "result": 1.098455,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 2028,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1641035471111,
  },
}
`;
